deleting extra folder

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <div class="footer__copyright" id="footer">
         <p>© 2021 Copyright Esl-ology.com & copyright owners.</p>
         <p>Image credits 
-   <a href="sports-credits.html">here.</a> Thanks,guys!</p>
+   <a href="food-credits.html">here.</a> Thanks,guys!</p>
   </div>
     </footer>
 
